rename btn-outline-muted, remove _3hmsj from html

--- a/edit/photos.html
+++ b/edit/photos.html
@@ -413,7 +413,7 @@
                                                             <div class="_1p99teo">
                                                               <button aria-label="Photo options" type="button"
                                                                 class="_1d3iagv">
-                                                                <span class="_3hmsj">
+                                                                <span>
                                                                   <svg viewBox="0 0 16 16"
                                                                     xmlns="http://www.w3.org/2000/svg"
                                                                     aria-hidden="true" role="presentation"
@@ -571,7 +571,7 @@
                                                                 <div class="_1p99teo">
                                                                   <button aria-label="Photo options" type="button"
                                                                     class="_1d3iagv">
-                                                                    <span class="_3hmsj">
+                                                                    <span>
                                                                       <svg viewBox="0 0 16 16"
                                                                         xmlns="http://www.w3.org/2000/svg"
                                                                         aria-hidden="true" role="presentation"
@@ -675,7 +675,7 @@
                                                                 <div class="_1p99teo">
                                                                   <button aria-label="Photo options" type="button"
                                                                     class="_1d3iagv">
-                                                                    <span class="_3hmsj">
+                                                                    <span>
                                                                       <svg viewBox="0 0 16 16"
                                                                         xmlns="http://www.w3.org/2000/svg"
                                                                         aria-hidden="true" role="presentation"
@@ -779,7 +779,7 @@
                                                                 <div class="_1p99teo">
                                                                   <button aria-label="Photo options" type="button"
                                                                     class="_1d3iagv">
-                                                                    <span class="_3hmsj">
+                                                                    <span>
                                                                       <svg viewBox="0 0 16 16"
                                                                         xmlns="http://www.w3.org/2000/svg"
                                                                         aria-hidden="true" role="presentation"
@@ -883,7 +883,7 @@
                                                                 <div class="_1p99teo">
                                                                   <button aria-label="Photo options" type="button"
                                                                     class="_1d3iagv">
-                                                                    <span class="_3hmsj">
+                                                                    <span>
                                                                       <svg viewBox="0 0 16 16"
                                                                         xmlns="http://www.w3.org/2000/svg"
                                                                         aria-hidden="true" role="presentation"
@@ -987,7 +987,7 @@
                                                                 <div class="_1p99teo">
                                                                   <button aria-label="Photo options" type="button"
                                                                     class="_1d3iagv">
-                                                                    <span class="_3hmsj">
+                                                                    <span>
                                                                       <svg viewBox="0 0 16 16"
                                                                         xmlns="http://www.w3.org/2000/svg"
                                                                         aria-hidden="true" role="presentation"
@@ -1091,7 +1091,7 @@
                                                                 <div class="_1p99teo">
                                                                   <button aria-label="Photo options" type="button"
                                                                     class="_1d3iagv">
-                                                                    <span class="_3hmsj">
+                                                                    <span>
                                                                       <svg viewBox="0 0 16 16"
                                                                         xmlns="http://www.w3.org/2000/svg"
                                                                         aria-hidden="true" role="presentation"
@@ -1195,7 +1195,7 @@
                                                                 <div class="_1p99teo">
                                                                   <button aria-label="Photo options" type="button"
                                                                     class="_1d3iagv">
-                                                                    <span class="_3hmsj">
+                                                                    <span>
                                                                       <svg viewBox="0 0 16 16"
                                                                         xmlns="http://www.w3.org/2000/svg"
                                                                         aria-hidden="true" role="presentation"
@@ -1299,7 +1299,7 @@
                                                                 <div class="_1p99teo">
                                                                   <button aria-label="Photo options" type="button"
                                                                     class="_1d3iagv">
-                                                                    <span class="_3hmsj">
+                                                                    <span>
                                                                       <svg viewBox="0 0 16 16"
                                                                         xmlns="http://www.w3.org/2000/svg"
                                                                         aria-hidden="true" role="presentation"
