--- a/edit/what.html
+++ b/edit/what.html
@@ -578,7 +578,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                                         Duration
                                                       </div>
                                                     </div>
-                                                    <div class="_3hmsj">
+                                                    <div>
                                                       <select
                                                         data-testid="DURATION"
                                                         name="DURATION"
