--- a/landing-pages/host-protection-insurance.html
+++ b/landing-pages/host-protection-insurance.html
@@ -11,7 +11,7 @@
   <body>
     <div class="navigation-section" role="navigation">
       <a aria-label="Airbnb Homepage" href="/" class="landing-page__faq-answer"
-        ><span class="_3hmsj"
+        ><span
           ><svg
             viewBox="0 0 1000 1000"
             role="img"
