--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -239,7 +239,7 @@
                                           <div class="nav-mobile">
                                             <div class="_du78a1u">
                                               <div class="_kv14gss" role="presentation"><a aria-label="Back" data-testid="back-button" href="/s/homes"
-                                                  class="_11ml4fm"><span class="_3hmsj">
+                                                  class="_11ml4fm"><span>
                                                     <div class="_1ran6xy">
                                                       <div><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-label="Back" role="img"
                                                           focusable="false"
@@ -254,7 +254,7 @@
                                                     </div>
                                                   </span></a></div>
                                               <div class="_1jdtwz4">
-                                                <div class="_1sstjj60"><button data-modal="#share-modal-mobile" aria-label="Share" type="button" class="_11ml4fm"><span class="_3hmsj"><svg
+                                                <div class="_1sstjj60"><button data-modal="#share-modal-mobile" aria-label="Share" type="button" class="_11ml4fm"><span><svg
                                                         viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                                         focusable="false"
                                                         style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;">
@@ -265,7 +265,7 @@
                                                         </g>
                                                       </svg></span></button></div>
                                                 <div><button aria-label="Remove listing from a list" data-testid="pdp-save-button-saved" type="button"
-                                                    class="_11ml4fm"><span class="_3hmsj"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
+                                                    class="_11ml4fm"><span><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                                         aria-hidden="true" role="presentation" focusable="false"
                                                         style="display: block; fill: rgb(255, 56, 92); height: 16px; width: 16px; stroke: rgb(255, 56, 92); stroke-width: 4; overflow: visible;">
                                                         <path
@@ -13214,7 +13214,7 @@
                   <div style="padding: 0px">
                     <div tabindex="0" class="_x0votz">
                       <div class="_1a5fl1v">
-                        <div class="_3hmsj">
+                        <div>
                           <div
                             style="
                               display: contents;
@@ -14409,7 +14409,7 @@
                 <div class="_1jza0fl">
                   <div tabindex="0" class="_8pghme8">
                     <div class="_1a5fl1v">
-                      <div class="_3hmsj">
+                      <div>
                         <div
                           style="
                             display: contents;
@@ -14627,7 +14627,7 @@
                   <div style="padding: 16px 0px 0px">
                     <div tabindex="0" class="_x0votz">
                       <div class="_1a5fl1v">
-                        <div class="_3hmsj">
+                        <div>
                           <div
                             style="
                               display: contents;
@@ -16266,7 +16266,7 @@
                   <div style="padding: 16px 0px 0px">
                     <div tabindex="0" class="_x0votz">
                       <div class="_1a5fl1v">
-                        <div class="_3hmsj">
+                        <div>
                           <div
                             style="
                               display: contents;
