--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -21906,7 +21906,7 @@
                   <div style="padding: 0px">
                     <div tabindex="0" class="_x0votz">
                       <div class="_1a5fl1v">
-                        <div class="_3hmsj">
+                        <div>
                           <div style="
                                   display: contents;
                                   --dls19-brand-color: var(--gray-900);
@@ -22675,7 +22675,7 @@
                 <div class="_1jza0fl">
                   <div tabindex="0" class="_8pghme8">
                     <div class="_1a5fl1v">
-                      <div class="_3hmsj">
+                      <div>
                         <div style="
                                 display: contents;
                                 --dls19-brand-color: var(--gray-900);
@@ -22839,7 +22839,7 @@
                   <div style="padding: 16px 0px 0px">
                     <div tabindex="0" class="_x0votz">
                       <div class="_1a5fl1v">
-                        <div class="_3hmsj">
+                        <div>
                           <div style="
                                   display: contents;
                                   --dls19-brand-color: var(--gray-900);
@@ -23973,7 +23973,7 @@
                   <div style="padding: 16px 0px 0px">
                     <div tabindex="0" class="_x0votz">
                       <div class="_1a5fl1v">
-                        <div class="_3hmsj">
+                        <div>
                           <div style="
                                   display: contents;
                                   --dls19-brand-color: var(--gray-900);
@@ -28106,7 +28106,7 @@
                                     d="m11.5 10.5c.3.3.3.8 0 1.1s-.8.3-1.1 0l-4.4-4.5-4.5 4.5c-.3.3-.8.3-1.1 0s-.3-.8 0-1.1l4.5-4.5-4.4-4.5c-.3-.3-.3-.8 0-1.1s.8-.3 1.1 0l4.4 4.5 4.5-4.5c.3-.3.8-.3 1.1 0s .3.8 0 1.1l-4.5 4.5z"
                                     fill-rule="evenodd"
                                   ></path></svg></span
-                              ><span class="_3hmsj">Close</span></span
+                              ><span>Close</span></span
                             >
                           </button>
                         </div>
@@ -28857,7 +28857,7 @@
                                           type="button"
                                           class="_1d3iagv"
                                         >
-                                          <span class="_3hmsj"
+                                          <span
                                             ><div class="_1tsvpuw">
                                               <svg
                                                 viewBox="0 0 32 32"
@@ -29188,7 +29188,7 @@
                 <div class="_17itzz4" style="padding: 0px 24px">
                   <div tabindex="0" class="_1seuw5go">
                     <div class="_1a5fl1v">
-                      <div class="_3hmsj">
+                      <div>
                         <div
                           style="
                             display: contents;
@@ -30263,7 +30263,7 @@
                 <div class="_1jza0fl">
                   <div tabindex="0" class="_8pghme8">
                     <div class="_1a5fl1v">
-                      <div class="_3hmsj">
+                      <div>
                         <div
                           style="
                             display: contents;
@@ -30474,7 +30474,7 @@
                 <div class="_17itzz4" style="padding: 40px 24px 24px">
                   <div tabindex="0" class="_1seuw5go">
                     <div class="_1a5fl1v">
-                      <div class="_3hmsj">
+                      <div>
                         <div
                           style="
                             display: contents;
@@ -32063,7 +32063,7 @@
                 <div class="_17itzz4" style="padding: 40px 24px 24px">
                   <div tabindex="0" class="_1seuw5go">
                     <div class="_1a5fl1v">
-                      <div class="_3hmsj">
+                      <div>
                         <div
                           style="
                             display: contents;
