--- a/loaders/products-loader.html
+++ b/loaders/products-loader.html
@@ -238,7 +238,7 @@
                                             <div class="_du78a1u">
                                               <div class="_kv14gss" role="presentation">
                                                <a aria-label="Back" data-testid="back-button" href="/" class="_11ml4fm">
-                                                <span class="_3hmsj">
+                                                <span>
                                                  <div class="_1ran6xy">
                                                   <div>
                                                    <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-label="Back" role="img" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;">
@@ -8212,7 +8212,7 @@
                               <path
                                 d="m11.5 10.5c.3.3.3.8 0 1.1s-.8.3-1.1 0l-4.4-4.5-4.5 4.5c-.3.3-.8.3-1.1 0s-.3-.8 0-1.1l4.5-4.5-4.4-4.5c-.3-.3-.3-.8 0-1.1s.8-.3 1.1 0l4.4 4.5 4.5-4.5c.3-.3.8-.3 1.1 0s .3.8 0 1.1l-4.5 4.5z"
                                 fill-rule="evenodd"></path>
-                            </svg></span><span class="_3hmsj">Close</span></span></button></div>
+                            </svg></span><span>Close</span></span></button></div>
                   </div>
                 </div>
                 <div class="_v7xhdzy">
