--- a/messaging/messages.html
+++ b/messaging/messages.html
@@ -764,7 +764,7 @@
                                                                         type="button" class="_1tpyesl"><span
                                                                           class="_14d5b3i"><span class="_apoo8e">I need
                                                                             help with something
-                                                                            else</span><span class="_3hmsj"><svg
+                                                                            else</span><span><svg
                                                                               viewBox="0 0 32 32"
                                                                               xmlns="http://www.w3.org/2000/svg"
                                                                               aria-hidden="true" role="presentation"
@@ -2577,7 +2577,7 @@
                                                                       type="button" class="_1tpyesl"><span
                                                                         class="_14d5b3i"><span class="_apoo8e">I need
                                                                           help with something
-                                                                          else</span><span class="_3hmsj"><svg
+                                                                          else</span><span><svg
                                                                             viewBox="0 0 32 32"
                                                                             xmlns="http://www.w3.org/2000/svg"
                                                                             aria-hidden="true" role="presentation"
@@ -3086,7 +3086,7 @@
                                       <span class="_1x34cdi" data-popper-arrow="true"
                                         style="position: absolute; left: 0px; transform: translate(140px, 0px);">
                                       </span>
-                                      <div class="_3hmsj">
+                                      <div>
                                         <div class="_1qy9490">Translation is on. You can change this at any time.</div>
                                       </div>
                                       <div class="_150ex8g">
