--- a/online-experience/insights.html
+++ b/online-experience/insights.html
@@ -1317,7 +1317,7 @@
                                       <span class="visually-hidden dir dir-ltr">
                                         Review range
                                       </span>
-                                      <div class="_3hmsj">
+                                      <div>
                                         <select
                                           class="_pabip3"
                                           id="EXPERIENCES_HOST_INSIGHTS_HEADING_SELECT-select"
