--- a/payments/payment-methods.html
+++ b/payments/payment-methods.html
@@ -2417,7 +2417,7 @@
                     <div data-testid="submit-button">
                       <button type="button" class="btn-dark">
                         <span class="btn-content-icontext"
-                          ><span class="_3hmsj">Done</span></span
+                          ><span>Done</span></span
                         >
                       </button>
                     </div>
