--- a/landing-pages/social-impact-host.html
+++ b/landing-pages/social-impact-host.html
@@ -20,7 +20,7 @@
               >
                 <div class="navigation-section" role="navigation">
                   <a aria-label="Airbnb Homepage" href="/" class="landing-page__faq-answer"
-                    ><span class="_3hmsj"
+                    ><span
                       ><svg
                         viewBox="0 0 1000 1000"
                         role="img"
@@ -1920,7 +1920,7 @@ Harlem, New York City"
                                               type="button"
                                               class="landing-page__faq-answer"
                                             >
-                                              <span class="_3hmsj"
+                                              <span
                                                 ><svg
                                                   viewBox="0 0 24 24"
                                                   role="img"
@@ -2003,7 +2003,7 @@ Harlem, New York City"
                                               type="button"
                                               class="landing-page__faq-answer"
                                             >
-                                              <span class="_3hmsj"
+                                              <span
                                                 ><svg
                                                   viewBox="0 0 24 24"
                                                   role="img"
@@ -2109,7 +2109,7 @@ Harlem, New York City"
                                               type="button"
                                               class="landing-page__faq-answer"
                                             >
-                                              <span class="_3hmsj"
+                                              <span
                                                 ><svg
                                                   viewBox="0 0 24 24"
                                                   role="img"
@@ -2190,7 +2190,7 @@ Harlem, New York City"
                                               type="button"
                                               class="landing-page__faq-answer"
                                             >
-                                              <span class="_3hmsj"
+                                              <span
                                                 ><svg
                                                   viewBox="0 0 24 24"
                                                   role="img"
@@ -2295,7 +2295,7 @@ Harlem, New York City"
                                               type="button"
                                               class="landing-page__faq-answer"
                                             >
-                                              <span class="_3hmsj"
+                                              <span
                                                 ><svg
                                                   viewBox="0 0 24 24"
                                                   role="img"
@@ -2380,7 +2380,7 @@ Harlem, New York City"
                                               type="button"
                                               class="landing-page__faq-answer"
                                             >
-                                              <span class="_3hmsj"
+                                              <span
                                                 ><svg
                                                   viewBox="0 0 24 24"
                                                   role="img"
@@ -2473,7 +2473,7 @@ Harlem, New York City"
                                               type="button"
                                               class="landing-page__faq-answer"
                                             >
-                                              <span class="_3hmsj"
+                                              <span
                                                 ><svg
                                                   viewBox="0 0 24 24"
                                                   role="img"
@@ -2567,7 +2567,7 @@ Harlem, New York City"
                                               type="button"
                                               class="landing-page__faq-answer"
                                             >
-                                              <span class="_3hmsj"
+                                              <span
                                                 ><svg
                                                   viewBox="0 0 24 24"
                                                   role="img"
