--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -19659,7 +19659,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
               <div aria-live="polite" class="p8cmq2p dir dir-ltr" dir="ltr"><span class="visually-hidden dir dir-ltr">1 of 2
                   pages</span><span aria-hidden="true">1 / 2</span></div>
               <div class="p109uh9k dir dir-ltr"><button aria-describedby="availability-title" aria-label="Previous"
-                  disabled="" type="button" class="_1d3iagv"><span class="_3hmsj"><svg viewBox="0 0 32 32"
+                  disabled="" type="button" class="_1d3iagv"><span><svg viewBox="0 0 32 32"
                       xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false"
                       style="display: block; fill: none; height: 12px; width: 12px; stroke: currentcolor; stroke-width: 5.33333; overflow: visible;">
                       <g fill="none">
@@ -19669,7 +19669,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                       </g>
                     </svg></span></button></div>
               <div class="pawnx8r dir dir-ltr"><button aria-describedby="availability-title" aria-label="Next"
-                  type="button" class="_1d3iagv"><span class="_3hmsj"><svg viewBox="0 0 32 32"
+                  type="button" class="_1d3iagv"><span><svg viewBox="0 0 32 32"
                       xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false"
                       style="display: block; fill: none; height: 12px; width: 12px; stroke: currentcolor; stroke-width: 5.33333; overflow: visible;">
                       <g fill="none">
@@ -19939,7 +19939,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                 <div aria-live="polite" class="p8cmq2p dir dir-ltr" dir="ltr"><span class="visually-hidden dir dir-ltr">1 of 3
                     pages</span><span aria-hidden="true">1 / 3</span></div>
                 <div class="p109uh9k dir dir-ltr"><button aria-label="Previous" disabled="" type="button"
-                    class="_1d3iagv"><span class="_3hmsj"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
+                    class="_1d3iagv"><span><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                         aria-hidden="true" role="presentation" focusable="false"
                         style="display: block; fill: none; height: 12px; width: 12px; stroke: currentcolor; stroke-width: 5.33333; overflow: visible;">
                         <g fill="none">
@@ -19949,7 +19949,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                         </g>
                       </svg></span></button></div>
                 <div class="pawnx8r dir dir-ltr"><button aria-label="Next" type="button" class="_1d3iagv"><span
-                      class="_3hmsj"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
+                     ><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                         role="presentation" focusable="false"
                         style="display: block; fill: none; height: 12px; width: 12px; stroke: currentcolor; stroke-width: 5.33333; overflow: visible;">
                         <g fill="none">
@@ -21936,7 +21936,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                           <path
                                             d="m11.5 10.5c.3.3.3.8 0 1.1s-.8.3-1.1 0l-4.4-4.5-4.5 4.5c-.3.3-.8.3-1.1 0s-.3-.8 0-1.1l4.5-4.5-4.4-4.5c-.3-.3-.3-.8 0-1.1s.8-.3 1.1 0l4.4 4.5 4.5-4.5c.3-.3.8-.3 1.1 0s .3.8 0 1.1l-4.5 4.5z"
                                             fill-rule="evenodd"></path>
-                                        </svg></span><span class="_3hmsj">Close</span></span></button></div>
+                                        </svg></span><span>Close</span></span></button></div>
                               </div>
                             </div>
                             <div class="_v7xhdzy">
@@ -22052,7 +22052,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                           <path
                                             d="m11.5 10.5c.3.3.3.8 0 1.1s-.8.3-1.1 0l-4.4-4.5-4.5 4.5c-.3.3-.8.3-1.1 0s-.3-.8 0-1.1l4.5-4.5-4.4-4.5c-.3-.3-.3-.8 0-1.1s.8-.3 1.1 0l4.4 4.5 4.5-4.5c.3-.3.8-.3 1.1 0s .3.8 0 1.1l-4.5 4.5z"
                                             fill-rule="evenodd"></path>
-                                        </svg></span><span class="_3hmsj">Close</span></span></button></div>
+                                        </svg></span><span>Close</span></span></button></div>
                               </div>
                             </div>
                             <div class="_v7xhdzy">
