--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -8358,7 +8358,7 @@
             <div aria-live="polite" class="p8cmq2p dir dir-ltr" dir="ltr"><span class="visually-hidden dir dir-ltr">1 of 7
                 pages</span><span aria-hidden="true">1 / 7</span></div>
             <div class="p109uh9k dir dir-ltr"><button aria-label="Previous" type="button" class="_1d3iagv"
-                disabled=""><span class="_3hmsj"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
+                disabled=""><span><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                     aria-hidden="true" role="presentation" focusable="false"
                     style="display: block; fill: none; height: 12px; width: 12px; stroke: currentcolor; stroke-width: 5.33333; overflow: visible;">
                     <g fill="none">
@@ -8368,7 +8368,7 @@
                     </g>
                   </svg></span></button></div>
             <div class="pawnx8r dir dir-ltr"><button aria-label="Next" type="button" class="_1d3iagv"><span
-                  class="_3hmsj"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
+                 ><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                     role="presentation" focusable="false"
                     style="display: block; fill: none; height: 12px; width: 12px; stroke: currentcolor; stroke-width: 5.33333; overflow: visible;">
                     <g fill="none">
@@ -27199,7 +27199,7 @@
                               <path
                                 d="m11.5 10.5c.3.3.3.8 0 1.1s-.8.3-1.1 0l-4.4-4.5-4.5 4.5c-.3.3-.8.3-1.1 0s-.3-.8 0-1.1l4.5-4.5-4.4-4.5c-.3-.3-.3-.8 0-1.1s.8-.3 1.1 0l4.4 4.5 4.5-4.5c.3-.3.8-.3 1.1 0s .3.8 0 1.1l-4.5 4.5z"
                                 fill-rule="evenodd"></path>
-                            </svg></span><span class="_3hmsj">Close</span></span></button></div>
+                            </svg></span><span>Close</span></span></button></div>
                   </div>
                 </div>
                 <div class="_v7xhdzy">
@@ -27310,7 +27310,7 @@
                               <path
                                 d="m11.5 10.5c.3.3.3.8 0 1.1s-.8.3-1.1 0l-4.4-4.5-4.5 4.5c-.3.3-.8.3-1.1 0s-.3-.8 0-1.1l4.5-4.5-4.4-4.5c-.3-.3-.3-.8 0-1.1s.8-.3 1.1 0l4.4 4.5 4.5-4.5c.3-.3.8-.3 1.1 0s .3.8 0 1.1l-4.5 4.5z"
                                 fill-rule="evenodd"></path>
-                            </svg></span><span class="_3hmsj">Close</span></span></button></div>
+                            </svg></span><span>Close</span></span></button></div>
                   </div>
                 </div>
                 <div class="_v7xhdzy">
