--- a/loaders/messages-loader.html
+++ b/loaders/messages-loader.html
@@ -547,7 +547,7 @@
                                                                         type="button" class="_1tpyesl"><span
                                                                           class="_14d5b3i"><span class="_apoo8e">I need
                                                                             help with something
-                                                                            else</span><span class="_3hmsj"><svg
+                                                                            else</span><span><svg
                                                                               viewBox="0 0 32 32"
                                                                               xmlns="http://www.w3.org/2000/svg"
                                                                               aria-hidden="true" role="presentation"
