--- a/messaging/inbox.html
+++ b/messaging/inbox.html
@@ -547,7 +547,7 @@
                                         style="max-width: 300px; position: fixed; left: 0px; top: 0px; margin: 0px; transform: translate(0px, 134px);" 
                                         data-popper-placement="bottom">
                                           <span class="_6n0ip2" data-popper-arrow="true" style="position: absolute; left: 0px; transform: translate(22px, 0px);"></span>
-                                          <div class="_3hmsj">Open</div>
+                                          <div>Open</div>
                                       </div>
                                     </button>
                                     <div class="_1mrzp8e">
@@ -671,7 +671,7 @@
                                           position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(-80px, -17px);" 
                                           data-popper-placement="left">
                                           <span class="_6n0ip2" data-popper-arrow="true" style="position: absolute; top: 0px; transform: translate(0px, 15px);"></span>
-                                          <div class="_3hmsj">Filter</div>
+                                          <div>Filter</div>
                                         </div>
                                       </button>
                                     </div>
@@ -1279,7 +1279,7 @@
                                         style="max-width: 300px; position: fixed; right: 0px; top: 0px; margin: 0px;" 
                                         data-popper-placement="bottom">
                                           <span class="_6n0ip2" data-popper-arrow="true" style="position: absolute; left: 0px; transform: translate(22px, 0px);"></span>
-                                          <div class="_3hmsj">Star</div>
+                                          <div>Star</div>
                                       </div>
                                       </button>
                                       <button
@@ -1314,7 +1314,7 @@
                                         style="max-width: 300px; position: fixed; right: 0px; top: 0px; margin: 0px;" 
                                         data-popper-placement="bottom">
                                           <span class="_6n0ip2" data-popper-arrow="true" style="position: absolute; left: 0px;"></span>
-                                          <div class="_3hmsj">Archive</div>
+                                          <div>Archive</div>
                                       </div>
                                     </button>
                                   </div>
@@ -1359,7 +1359,7 @@
                                     style="max-width: 300px; position: fixed; right: 0px; top: 0px; margin: 0px; transform: translate(0, 140px);" 
                                     data-popper-placement="bottom">
                                       <span class="_6n0ip2" data-popper-arrow="true" style="position: absolute; left: 0px; transform: translate(22px, 0px);"></span>
-                                      <div class="_3hmsj">Close</div>
+                                      <div>Close</div>
                                   </div>
                                 </a>
                                 </div>
@@ -2024,7 +2024,7 @@
                                     style="max-width: 300px; position: fixed; right: 0px; top: 0px; margin: 0px; transform: translate(-5px, 140px);" 
                                     data-popper-placement="bottom">
                                       <span class="_6n0ip2" data-popper-arrow="true" style="position: absolute; left: 0px; transform: translate(24px, 0px);"></span>
-                                      <div class="_3hmsj">Close</div>
+                                      <div>Close</div>
                                   </div>
                                 </a>
                                 </div>
