--- a/payments/payment.html
+++ b/payments/payment.html
@@ -1393,7 +1393,7 @@
                                                         class="c4wd1yj dir dir-ltr"
                                                       >
                                                         <span class="_14d5b3i">
-                                                          <span class="_3hmsj">
+                                                          <span>
                                                             Confirm and pay
                                                           </span>
                                                         </span>
@@ -5162,7 +5162,7 @@
                     <div data-testid="submit-button">
                       <button type="button" class="btn-dark">
                         <span class="btn-content-icontext">
-                          <span class="_3hmsj">Done</span>
+                          <span>Done</span>
                         </span>
                       </button>
                     </div>
