flex-before-after

--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -5750,7 +5750,7 @@
                                           <div
                                             class="main-content__details-button-wrapper"
                                           >
-                                            <div class="c1yo0219 dir dir-ltr">
+                                            <div class="flex-before-after dir dir-ltr">
                                               <div
                                                 data-plugin-in-point-id="NAV_DEFAULT"
                                                 data-section-id="NAV_DEFAULT"
@@ -5802,7 +5802,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="c1yo0219 dir dir-ltr">
+                                            <div class="flex-before-after dir dir-ltr">
                                               <div
                                                 data-plugin-in-point-id="BOOK_IT_NAV"
                                                 data-section-id="BOOK_IT_NAV"
@@ -22681,7 +22681,7 @@
                                 --dls19-brand-color: var(--gray-900);
                               ">
                           <div class="_1ynbv25">
-                            <div class="c1yo0219 dir dir-ltr">
+                            <div class="flex-before-after dir dir-ltr">
                               <div style="--gp-section-max-width: 1120px">
                                 <div data-plugin-in-point-id="DESCRIPTION_MODAL" data-section-id="DESCRIPTION_MODAL" style="
                                         padding-top: 16px;
@@ -30271,7 +30271,7 @@
                           "
                         >
                           <div class="_88xxct">
-                            <div class="c1yo0219 dir dir-ltr">
+                            <div class="flex-before-after dir dir-ltr">
                               <div style="--gp-section-max-width: 1120px">
                                 <div
                                   data-plugin-in-point-id="DESCRIPTION_MODAL"
