--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -14417,7 +14417,7 @@
                           "
                         >
                           <div class="_1ynbv25">
-                            <div class="c1yo0219 dir dir-ltr">
+                            <div class="flex-before-after dir dir-ltr">
                               <div style="--gp-section-max-width: 1120px">
                                 <div
                                   data-plugin-in-point-id="DESCRIPTION_MODAL"
