fix bugs in full-screen-hero

--- a/full-screen-hero.html
+++ b/full-screen-hero.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Redeem an Airbnb gift card | Airbnb®</title>
+    <title>Management Service for Hosts in Antibes - Airbnb</title>
 
     <link rel="stylesheet" href="./assets/css/global.css" />
     <link rel="stylesheet" href="./assets/css/pages.css" />
-    <!-- <link rel="stylesheet" href="./assets/css/fullscreen.css" /> -->
   </head>
 
   <body class="with-new-header">
