--- a/full-screen-hero.html
+++ b/full-screen-hero.html
@@ -56,7 +56,7 @@
                          ></path>
                         </svg>
                        </a>
-                       <div class="_yz46843">
+                       <div class="hero">
                         <div class="_n02jag" id="marquee">
                          <div class="_v0gz4uz" style="--dls-liteimage-padding-top: 50%;">
                           <div class="_4626ulj">
