--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -362,7 +362,7 @@
 <div data-plugin-in-point-id="HERO_EXPERIENCES" data-section-id="HERO_EXPERIENCES">
   <div class="block">
     <div class="_15zu15p" style="padding-top: 133.333%;">
-      <div class="_n02jag">
+      <div class="absolute-reset">
         <div class="_1xprcp5x">
           <div class="_v0gz4uz" style="--dls-liteimage-padding-top:133.333%;">
             <div class="_4626ulj">
