--- a/landing-pages/social-impact-host.html
+++ b/landing-pages/social-impact-host.html
@@ -158,7 +158,7 @@
                                           style="height: 440px; width: 100%"
                                         >
                                           <div
-                                            class="_v0gz4uz"
+                                            class="lite-image"
                                             style="
                                               border-radius: 12px;
                                               --dls-liteimage-padding-top: 50%;
@@ -1209,7 +1209,7 @@ Harlem, New York City"
                                           style="height: 440px; width: 100%"
                                         >
                                           <div
-                                            class="_v0gz4uz"
+                                            class="lite-image"
                                             style="
                                               border-radius: 12px;
                                               --dls-liteimage-padding-top: 50%;
