--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -28902,7 +28902,7 @@
                                               class="_1yfus1e"
                                             >
                                               <div
-                                                class="_v0gz4uz"
+                                                class="lite-image"
                                                 role="img"
                                                 aria-busy="false"
                                                 aria-label="9 double bedroom luxury villa with infinity pool"
