--- a/payments/your-payments.html
+++ b/payments/your-payments.html
@@ -295,7 +295,7 @@
                                             ><div class="_706pm">
                                               <div class="_1kjdspq">
                                                 <div
-                                                  class="_v0gz4uz"
+                                                  class="lite-image"
                                                   style="
                                                     --dls-liteimage-padding-top: 100%;
                                                   "
@@ -374,7 +374,7 @@
                                             ><div class="_706pm">
                                               <div class="_1kjdspq">
                                                 <div
-                                                  class="_v0gz4uz"
+                                                  class="lite-image"
                                                   style="
                                                     --dls-liteimage-padding-top: 100%;
                                                   "
@@ -453,7 +453,7 @@
                                             ><div class="_706pm">
                                               <div class="_1kjdspq">
                                                 <div
-                                                  class="_v0gz4uz"
+                                                  class="lite-image"
                                                   style="
                                                     --dls-liteimage-padding-top: 100%;
                                                   "
@@ -780,7 +780,7 @@
                                               ><div class="_706pm">
                                                 <div class="_1kjdspq">
                                                   <div
-                                                    class="_v0gz4uz"
+                                                    class="lite-image"
                                                     style="
                                                       --dls-liteimage-padding-top: 100%;
                                                     "
@@ -861,7 +861,7 @@
                                               ><div class="_706pm">
                                                 <div class="_1kjdspq">
                                                   <div
-                                                    class="_v0gz4uz"
+                                                    class="lite-image"
                                                     style="
                                                       --dls-liteimage-padding-top: 100%;
                                                     "
@@ -942,7 +942,7 @@
                                               ><div class="_706pm">
                                                 <div class="_1kjdspq">
                                                   <div
-                                                    class="_v0gz4uz"
+                                                    class="lite-image"
                                                     style="
                                                       --dls-liteimage-padding-top: 100%;
                                                     "
