--- a/full-screen-hero.html
+++ b/full-screen-hero.html
@@ -59,7 +59,7 @@
                        <div class="hero">
                         <div class="absolute-reset" id="marquee">
                          <div class="lite-image" style="--dls-liteimage-padding-top: 50%;">
-                          <div class="_4626ulj">
+                          <div class="absolute-center">
                            <picture>
                             <source srcset="https://a0.muscache.com/im/pictures/bb3ded9f-7cf9-4b27-859e-bba73bb4070a.jpg?im_w=320 1x, https://a0.muscache.com/im/pictures/bb3ded9f-7cf9-4b27-859e-bba73bb4070a.jpg?im_w=720 2x" media="(max-width: 743px)" />
                             <source
