--- a/landing-pages/social-impact-host.html
+++ b/landing-pages/social-impact-host.html
@@ -164,7 +164,7 @@
                                               --dls-liteimage-padding-top: 50%;
                                             "
                                           >
-                                            <div class="_4626ulj">
+                                            <div class="absolute-center">
                                               <img
                                                 class="_91slf2a"
                                                 aria-hidden="true"
@@ -1215,7 +1215,7 @@ Harlem, New York City"
                                               --dls-liteimage-padding-top: 50%;
                                             "
                                           >
-                                            <div class="_4626ulj">
+                                            <div class="absolute-center">
                                               <img
                                                 class="_91slf2a"
                                                 aria-hidden="true"
