--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -28910,7 +28910,7 @@
                                                   --dls-liteimage-padding-top: 66.6667%;
                                                 "
                                               >
-                                                <div class="_4626ulj">
+                                                <div class="absolute-center">
                                                   <img
                                                     class="_91slf2a"
                                                     aria-hidden="true"
