--- a/payments/your-payments.html
+++ b/payments/your-payments.html
@@ -300,7 +300,7 @@
                                                     --dls-liteimage-padding-top: 100%;
                                                   "
                                                 >
-                                                  <div class="_4626ulj">
+                                                  <div class="absolute-center">
                                                     <img
                                                       class="lite-image__default-static"
                                                       aria-hidden="true"
@@ -379,7 +379,7 @@
                                                     --dls-liteimage-padding-top: 100%;
                                                   "
                                                 >
-                                                  <div class="_4626ulj">
+                                                  <div class="absolute-center">
                                                     <img
                                                       class="lite-image__default-static"
                                                       aria-hidden="true"
@@ -458,7 +458,7 @@
                                                     --dls-liteimage-padding-top: 100%;
                                                   "
                                                 >
-                                                  <div class="_4626ulj">
+                                                  <div class="absolute-center">
                                                     <img
                                                       class="lite-image__default-static"
                                                       aria-hidden="true"
@@ -785,7 +785,7 @@
                                                       --dls-liteimage-padding-top: 100%;
                                                     "
                                                   >
-                                                    <div class="_4626ulj">
+                                                    <div class="absolute-center">
                                                       <img
                                                         class="lite-image__default-static"
                                                         aria-hidden="true"
@@ -866,7 +866,7 @@
                                                       --dls-liteimage-padding-top: 100%;
                                                     "
                                                   >
-                                                    <div class="_4626ulj">
+                                                    <div class="absolute-center">
                                                       <img
                                                         class="lite-image__default-static"
                                                         aria-hidden="true"
@@ -947,7 +947,7 @@
                                                       --dls-liteimage-padding-top: 100%;
                                                     "
                                                   >
-                                                    <div class="_4626ulj">
+                                                    <div class="absolute-center">
                                                       <img
                                                         class="lite-image__default-static"
                                                         aria-hidden="true"
